--- a/templates/webapp/newaccount.html
+++ b/templates/webapp/newaccount.html
@@ -332,6 +332,7 @@
                        data-slider-value="{{ form.salty.value | default_if_none:'50' }}"
                        data-slider-tooltip="hide"
                        data-slider-id="salty"
+                       value="{{ form.salty.value | default_if_none:'50' }}"
                         >
             </div>
 
@@ -344,6 +345,7 @@
                        data-slider-value="{{ form.sour.value | default_if_none:'50' }}"
                        data-slider-tooltip="hide"
                        data-slider-id="sour"
+                       value="{{ form.sour.value | default_if_none:'50' }}"
                         >
             </div>
 
@@ -356,6 +358,7 @@
                        data-slider-value="{{ form.bitter.value | default_if_none:'50' }}"
                        data-slider-tooltip="hide"
                        data-slider-id="bitter"
+                       value="{{ form.bitter.value | default_if_none:'50' }}"
                         >
             </div>
 
@@ -368,6 +371,7 @@
                        data-slider-value="{{ form.sweet.value | default_if_none:'50' }}"
                        data-slider-tooltip="hide"
                        data-slider-id="sweet"
+                       value="{{ form.sweet.value | default_if_none:'50' }}"
                         >
             </div>
 
@@ -380,6 +384,7 @@
                        data-slider-value="{{ form.spicy.value | default_if_none:'50' }}"
                        data-slider-tooltip="hide"
                        data-slider-id="spicy"
+                       value="{{ form.spicy.value | default_if_none:'50' }}"
                         >
             </div>
         </div>
