Recoge los pasos introducidos en el formulario html y añade campos al Form de manera dinámica para cada uno.
Creo un método provisional en la vista para obtener la lista de pasos de la request.
Creo un método en el NewRecipeForm para obtener la lista de pasos después de procesaor los campos.

--- a/templates/webapp/newrecipe.html
+++ b/templates/webapp/newrecipe.html
@@ -250,7 +250,7 @@
                                 <textarea class="form-control input-lg"
                                           placeholder="What is the first step?…"
                                           rows="4"
-                                          name="step" id="id_step"
+                                          name="step_{row-count-placeholder}" id="id_step_{row-count-placeholder}"
                                         ></textarea>
                             </div>
                             <div class="col-sm-2 step-picture">
